# Enclave-Core-Network-Temp

./: .gitignore  CASE_STUDY.md  CMakeLists.txt  DEVELOPER_QUICKSTART.md  FUTURE_SECURITY_VECTOR.md  LICENSE  MANUAL.md  README.md  SECURITY.md  build_all.sh  deploy_enclave_server.sh
.github/workflows/: ci_test_pipeline.yml
src/boot/: bootloader.asm  linux_module_wrapper.c  windows_driver_wrapper.c
src/common/: amd_gate.asm  enclave_hypercall.h  enclave_integration.h  main.cpp
src/config/: iommu_policy.cfg
src/core/: driver_build_suite.sh  encrypted_logger.cpp  fuzz_protection_engine.cpp  hardware_diagnostic_pipeline.cpp  interrupt_filter_engine.cpp  kernel_hook_protection.cpp  linux_driver_wrapper.c  polymorphic_sync_engine.cpp  secure_logger.cpp
src/core/amd/: npt_handler.cpp  svm_core.cpp
src/core/intel/: ept_handler.cpp  vmx_core.cpp
src/deploy/: enclave_boot.service  register_elam.reg
src/server/: attested_network_transport.cpp  attested_network_transport.h
tests/: hardware_diagnostic_pipeline.py
